[project]
name = "ESClab"
version = "0.2.3"
authors = [
  { name="Uygar SÖĞÜTLÜ", email="sogutlu.uygar@student.atilim.edu.tr" },
]
description = "An Application for displaying and processing over ESC Data Logs."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Application Frameworks"
]
dependencies = [
  "PyQt6>=6.7.1",
  "numpy>=2.0.2",
  "pandas>=2.2.2",
  "plotly>=5.24.0",
  "matplotlib>=3.4.3",
  "PyQt6-WebEngine>=6.7.0"
]
[project.urls]
Homepage = "https://github.com/quadfart/esclab"
Issues = "https://github.com/quadfart/esclab/issues"